update d-ary heap solution

--- a/w8_HomeworkBeforeMidterm.ipynb
+++ b/w8_HomeworkBeforeMidterm.ipynb
@@ -100,23 +100,23 @@
     "n sums of the given array is [9, 10, 12].\n",
     "\n",
     "procedure find_minimum_array(n)\n",
-    "    #Find change from previous\n",
-    "    for i := 0 to n-1 do            #O(n)\n",
-    "        for j := 1 to n-1 do        #O(n) for each i, O(n^2) in total\n",
+    "    #Precompute the differences between this and previous element in each array\n",
+    "    for i := 0 to n-1 do                                            #O(n)\n",
+    "        for j := 1 to n-1 do                                        #O(n) for each i, O(n^2) in total\n",
     "            diffArr[i][j] = A[i][j] - A[i][j-1]\n",
     "        end for\n",
     "    end for\n",
     "\n",
     "    #Find lowest sum of all possible sum\n",
-    "    for i := 0 to n-1 do            #O(n)\n",
+    "    for i := 0 to n-1 do                                            #O(n)\n",
     "        sum += A[i][0]\n",
     "    end for\n",
     "\n",
-    "    pq = PriorityQueue() # max heap\n",
-    "    pq.push(-sum, [0 for _ in range(n), -1) #push negative to trash main\n",
+    "    pq = PriorityQueue()                                            # max heap which is used to keep track of the smallest sums as they are formed.\n",
+    "    pq.push(-sum, [0 for _ in range(n), -1)                         #push negative to trash main, The negative sign ensures that the largest sum in the priority queue is removed first\n",
     "\n",
-    "    for i:= 0 to n-1 do             #O(n)\n",
-    "        ansArr[i], stateArr[], last = pq.pop()      #O(log n)\n",
+    "    for i:= 0 to n-1 do                                             #O(n)\n",
+    "        ansArr[i], stateArr[], last = pq.pop()                      #O(log n)\n",
     "        for j = last to n-1 do\n",
     "            if stateArr[i] not equal to n-1 do\n",
     "                pq.push(ansArr[i]_diff[j][++stateArr[j]], stateArr, j)      #O(log n)\n",
@@ -296,41 +296,76 @@
     "The d-ary heap, also known as the d-heap, is a type of priority queue data\n",
     "structure. It extends the concept of the binary heap by allowing nodes to\n",
     "have d children instead of just 2.\n",
+    "\n",
+    "/////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "\n",
     "(a) Describe how to represent a d-ary heap in an array.\n",
-    "(b) Give an efficient implementation of ExtractMin in a d-ary min-heap.\n",
+    "\n",
+    "Ans: A d-ary heap can be represented in an array where the root is at index 0. \n",
+    "The parent of a node at index i is at index (i - 1) // d.\n",
+    "\n",
+    "The children of a node at index i are at indices d * i + 1, d * i + 2, ..., d * i + d.\n",
+    "\n",
+    "So, if you have a node at index i, the parent is calculated as (i - 1) // d, and the \n",
+    "children are found using the formula d * i + 1 to d * i + d.\n",
+    "\n",
+    "This can be visualized as a complete tree stored in an array, where the root is at index 0, \n",
+    "and you can easily navigate to the children and parent using simple arithmetic.\n",
+    "\n",
+    "/////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "\n",
+    "(b) Give an efficient implementation of \"ExtractMin\" in a d-ary min-heap.\n",
     "Analyze its running time in terms of d and n.\n",
     "\n",
-    "(c) Give an efficient implementation of DecreaseKey in a d-ary min-\n",
+    "Ans: The ExtractMin operation in a d-ary min-heap involves the following steps:\n",
+    "1. Remove the root element (the minimum element).\n",
+    "2. Replace the root with the last element in the heap (the last element in the array).\n",
+    "3. Restore the heap property by performing a \"down-heap\" or \"sift-down\" operation. \n",
+    "This involves comparing the new root with its d children and swapping it with \n",
+    "the smallest child until the heap property is restored.\n",
+    "\n",
+    "Time Complexity: The time complexity of ExtractMin is O(d * log_d(n)), where\n",
+    "n is the number of elements in the heap. This is because each sift-down \n",
+    "operation may require checking d children, and the height of a d-ary heap is log_d(n).\n",
+    "\n",
+    "/////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "\n",
+    "(c) Give an efficient implementation of \"DecreaseKey\" in a d-ary min-\n",
     "heap. Analyze its running time in terms of d and n.\n",
     "\n",
-    "(d) Give an efficient implementation of Insert in a d-ary min-heap. An-\n",
-    "alyze its running time in terms of d and n.\n",
-    "\n",
-    "(a) A d-ary heap can be represented in an array where the root is at index 0. \n",
-    "For any node at index i, its children can be found at indices d*i + 1, d*i + 2, ..., d*i + d. \n",
-    "The parent of a node at index i can be found at index (i - 1) // d.\n",
-    "\n",
-    "(b) The ExtractMin operation in a d-ary min-heap involves the following steps:\n",
-    "1. Remove the root element (the minimum element).\n",
-    "2. Replace the root with the last element in the heap.\n",
-    "3. Restore the heap property by performing a \"down-heap\" or \"sift-down\" operation, \n",
-    "which involves comparing the new root with its children and swapping it with the \n",
-    "smallest child until the heap property is restored.\n",
-    "The running time of ExtractMin is O(d * log_d(n)), where n is the number of elements in the heap. \n",
-    "This is because each sift-down operation may require checking d children, \n",
-    "and the height of a d-ary heap is log_d(n).\n",
-    "\n",
-    "(c) The DecreaseKey operation in a d-ary min-heap involves the following steps:\n",
+    "Ans: The DecreaseKey operation in a d-ary min-heap involves the following steps:\n",
     "1. Decrease the value of a node to a new value that is smaller than its current value.\n",
     "2. If the new value is smaller than the parent's value, swap the node with its parent.\n",
     "3. Repeat this process until the heap property is restored.\n",
-    "The running time of DecreaseKey is O(d * log_d(n)), as it may require moving up the tree\n",
-    " to restore the heap property, and each step involves checking d children.\n",
     "\n",
-    "(d) The Insert operation in a d-ary min-heap involves the following steps:\n",
+    "Time Complexity: The time complexity of DecreaseKey is O(log_d(n)), since it may require moving \n",
+    "up the tree to restore the heap property. At each step, you compare the node with its parent, and \n",
+    "the height of the tree is O(log_d(n)). There's no d factor in the time complexity here because \n",
+    "you're only comparing with the parent node, not all children.\n",
+    "\n",
+    "/////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "\n",
+    "(d) Give an efficient implementation of \"Insert\" in a d-ary min-heap. An-\n",
+    "alyze its running time in terms of d and n.\n",
+    "\n",
+    "Ans: The Insert operation in a d-ary min-heap involves the following steps:\n",
     "1. Add the new element to the end of the heap (the next available index in the array).\n",
-    "2. Perform an \"up-heap\" or \"sift-up\" operation, which involves comparing the new \n",
-    "element with its parent and swapping it until the heap property is restored.       "
+    "2. Perform an \"up-heap\" or \"sift-up\" operation, which involves comparing the new element \n",
+    "with its parent and swapping it until the heap property is restored.\n",
+    "\n",
+    "Time Complexity: The time complexity of Insert is O(log_d(n)), as the \"up-heap\" operation involves \n",
+    "moving up the tree, and the height of the tree is O(log_d(n)). Each comparison only involves the parent\n",
+    "node (not all d children), so the time complexity is O(log_d(n)) rather than O(d * log_d(n)).\n",
+    "\n",
+    "/////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "\n",
+    "Summary of Time Complexities:\n",
+    "\n",
+    "ExtractMin: O(d * log_d(n))\n",
+    "\n",
+    "DecreaseKey: O(log_d(n))\n",
+    "\n",
+    "Insert: O(log_d(n))"
    ]
   }
  ],
