--- a/w8_HomeworkBeforeMidterm.ipynb
+++ b/w8_HomeworkBeforeMidterm.ipynb
@@ -142,34 +142,38 @@
    },
    "source": [
     "4.)\n",
-    "Write an algorithm to sort n integers in the range 0 to n^3 −1 in O(n) time.\n",
+    "Write an algorithm to sort n integers in \n",
+    "the range 0 to n^3 −1 in O(n) time.\n",
     "\n",
     "procedure radix_sort(arr, n, exp)\n",
     "    output Array = [0] * n\n",
     "    count Array = [0] * n\n",
     "\n",
     "    #Store count of occurrences in count[]\n",
-    "    for i to n                                                                                                      #O(n)\n",
+    "    for i to n                      #O(n)\n",
     "        digit = (arr[i] // exp) % n\n",
     "        count[digit] += 1\n",
     "    end for\n",
     "\n",
-    "    #Change count[i] so that count[i] now contains the actual position of this digit in the output array.\n",
-    "    for i from 1 to n                                                                                               #O(n)\n",
+    "    #Change count[i] so that count[i] now \n",
+    "\n",
+    "    #digit in the output array.\n",
+    "    for i from 1 to n               #O(n)\n",
     "        count[i] += count[i-1]\n",
     "    end for\n",
     "\n",
     "    #Build the output array.\n",
     "    i = n-1\n",
-    "    while i >= 0                                                                                                    #O(n)\n",
+    "    while i >= 0                    #O(n)\n",
     "        digit = (arr[i] // exp) % n\n",
     "        output[count[digit] - 1] = arr[i]\n",
     "        count[digit] -= 1\n",
     "        i -= 1\n",
     "    end while\n",
     "\n",
-    "    #Copy the sorted elements from the output array back to the original array.\n",
-    "    for i to n                                                                                                      #O(n)\n",
+    "    #Copy the sorted elements from output \n",
+    "    #array back to the original array.\n",
+    "    for i to n                      #O(n)\n",
     "        arr[i] = output[i]\n",
     "    end for\n",
     "end procedure\n",
@@ -179,19 +183,19 @@
     "    if n == 0:\n",
     "        return arr\n",
     "\n",
-    "    counting_sort_by_digit(arr, n, 1)                                                                                #O(n)\n",
-    "    counting_sort_by_digit(arr, n, n)                                                                                #O(n)\n",
-    "    counting_sort_by_digit(arr, n, n*n)                                                                              #O(n)\n",
+    "    counting_sort_by_digit(arr, n, 1)   #O(n)\n",
+    "    counting_sort_by_digit(arr, n, n)   #O(n)\n",
+    "    counting_sort_by_digit(arr, n, n*n) #O(n)\n",
     "\n",
     "    return arr\n",
     "end procedure\n",
     "\n",
     "\"\"\"\n",
-    "worse time complexity will be O(n) + O(n) + O(n) = 3 * O(n) = O(n)\n",
+    "worse time complexity \n",
+    "O(n) + O(n) + O(n) = 3 * O(n) = O(n)\n",
     "\n",
-    "Yes, the algorithm works properly and sorts the n integers in the range [0, n³ - 1] in O(n) time complexity. \n",
-    "This is because the number of passes is constant (since the maximum number has 3 digits), and each pass is done in linear time O(n). \n",
-    "Hence, the overall time complexity is O(n), as required.\n",
+    "number of passes is constant and each pass \n",
+    "is done in linear time O(n).\n",
     "\"\"\"\n"
    ]
   },
@@ -359,7 +363,7 @@
     "\n",
     "/////////////////////////////////////////////////////////////////////////////////////////////\n",
     "\n",
-    "Summary of Time Complexities:\n",
+    "Summary of Time Complexities of d-ary heap:\n",
     "\n",
     "ExtractMin: O(d * log_d(n))\n",
     "\n",
