--- a/w8_merge_sort_tc.ipynb
+++ b/w8_merge_sort_tc.ipynb
@@ -99,7 +99,7 @@
    "id": "45d1c9ac",
    "metadata": {},
    "source": [
-    "### Merge sort with O(n² log n) Time Complexity (unusual)\n",
+    "### Merge sort with O(n²) Time Complexity (unusual)\n",
     "The algorithm is looks like Merge Sort but performs worse."
    ]
   },
