Update Fractional Knapsack

--- a/w9_ch.8_greedyAlgorithm.ipynb
+++ b/w9_ch.8_greedyAlgorithm.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "We denote that the first activity in $A*_{ij}$ as $a_k$, that is $A*_{ij}$ = {$a_k,...$}. It's follow that $a_k$ is subset of $S_{ij}$. Suppose that $a_m$ is subset of $S_{ij}$ is the activity that has the earliest finish time.\n",
     "\n",
-    "If $a_k$ &ne; $a_m$, we construct another solution $A**_{ij}$ = $A*_{ij}$ - {$a_k$} union {$a_m$}. The activitt in $A**_{ij}$ is valid since all activities are disjoint and $f_m < f_k$. It's follow that |$A**_{ij}$| = |$A*_{ij}$| since we subtract {$a_k$} and one activity {$a_m$}. Therefore, this exchange gives a diffrent optimal solution and does not chage the cose\n",
+    "If $a_k$ &ne; $a_m$, we construct another solution $A**_{ij}$ = $A*_{ij}$ - {$a_k$} union {$a_m$}. The activitt in $A**_{ij}$ is valid since all activities are disjoint and $f_m < f_k$. It's follow that |$A**_{ij}$| = |$A*_{ij}$| since we subtract {$a_k$} and one activity {$a_m$}. Therefore, this exchange gives a diffrent optimal solution and does not chage the cost.\n",
     "\n",
     "**Therefore, this is the valid greedy choice**"
    ]
@@ -133,6 +133,117 @@
   {
    "cell_type": "markdown",
    "id": "07611aa4",
+   "metadata": {},
+   "source": [
+    "## Huffman Code\n",
+    "\n",
+    "Let $x$ and $y$ two characters in $C$ with minimum frequency.\n",
+    "\n",
+    "### Proof by Exchange Argument\n",
+    "\n",
+    "Let:\n",
+    "\n",
+    "$$\n",
+    "BT = [cCc] \\cdot \\text{freq}_{dT}[c]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "BT' = [cCc] \\cdot \\text{freq}_{dT'}[c]\n",
+    "$$\n",
+    "\n",
+    "### Difference between two solutions:\n",
+    "\n",
+    "\\[\n",
+    "\\begin{align*}\n",
+    "BT - BT' &= [cCc] \\cdot \\text{freq}_{dT}[c] - [cCc] \\cdot \\text{freq}_{dT'}[c] \\\\\n",
+    "        &= [x] \\cdot \\text{freq}_{dT}[x] + [a] \\cdot \\text{freq}_{dT}[a] - [x] \\cdot \\text{freq}_{dT'}[x] + [a] \\cdot \\text{freq}_{dT'}[a] \\\\\n",
+    "        &= [x] \\cdot \\text{freq}_{dT}[x] + [a] \\cdot \\text{freq}_{dT}[a] - [x] \\cdot \\text{freq}_{dT}[a] + [a] \\cdot \\text{freq}_{dT}[x] \\\\\n",
+    "        &= [a] \\cdot \\text{freq} - [x] \\cdot \\text{freq}_{dT}[a] - dT[x] \\\\\n",
+    "        &= 0\n",
+    "\\end{align*}\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\\[\n",
+    "\\begin{align*}\n",
+    "BT' - BT'' &= [cCc] \\cdot \\text{freq}_{dT'}[c] - [cCc] \\cdot \\text{freq}_{dT''}[c] \\\\\n",
+    "          &= [y] \\cdot \\text{freq}_{dT'}[y] + [b] \\cdot \\text{freq}_{dT'}[b] - [y] \\cdot \\text{freq}_{dT''}[y] + [b] \\cdot \\text{freq}_{dT''}[b] \\\\\n",
+    "          &= [y] \\cdot \\text{freq}_{dT'}[y] + [b] \\cdot \\text{freq}_{dT'}[b] - [y] \\cdot \\text{freq}_{dT'}[b] + [b] \\cdot \\text{freq}_{dT'}[y] \\\\\n",
+    "          &= [b] \\cdot \\text{freq} - [y] \\cdot \\text{freq}_{dT'}[b] - dT'[y] \\\\\n",
+    "          &= 0\n",
+    "\\end{align*}\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Exchange Argument Proof Steps\n",
+    "\n",
+    "1. **Define the solution**  \n",
+    "   Let $X$ be the result from the **greedy solution**, and let $X^*$ be the **optimal solution**.  \n",
+    "   _Tip: use a data structure that is easy to compare or swap elements in._\n",
+    "\n",
+    "2. **Compare the solutions**  \n",
+    "   Suppose $X \\ne X^*$.  \n",
+    "   That means the greedy solution is not optimal.\n",
+    "\n",
+    "3. **Exchange pieces**  \n",
+    "   Find the first element where $X$ and $X^*$ differ.  \n",
+    "   Replace that element in $X^*$ with the one chosen by the greedy algorithm.\n",
+    "\n",
+    "   If the new solution is better or equally good, this contradicts the assumption that $X^*$ was optimal.  \n",
+    "   ➤ Therefore, our greedy choice must be valid, and $X$ is indeed optimal.\n",
+    "\n",
+    "**compare find lowest two pair, sum them then repeat**\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3659b2",
+   "metadata": {},
+   "source": [
+    "## Fractional Knapsack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf4044c3",
+   "metadata": {},
+   "source": [
+    "### Cross the Dark Tunnel\n",
+    "\n",
+    "Let $a,b$ be the pair of the fastest players and let $x,y$ be the pair of the slowest players. Suppose that $a \\le b$ and $x \\le y$.\n",
+    "\n",
+    "Strategy 1: Total time: $ T_1 = y+a+x+a=2a+x+y$\n",
+    "\n",
+    "Strategy 2: Total time: $ T_2 = b+a+y+b=a+2b+y$\n",
+    "\n",
+    "We use strategy 1 if and only if $T_1 < T_2$\n",
+    "\n",
+    "$2a + x +y < a + 2b + y$\n",
+    "\n",
+    "if $a + x < 2b$ use Strategy 1, if not use 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3e92511",
+   "metadata": {},
+   "source": [
+    "### Exam\n",
+    "\n",
+    "1. Dynamic programming: \n",
+    "\n",
+    "2. Greedy Algorithm: Oprimal substructure and greedy choice are require, Identify the greedy choice is the hardest\n",
+    "\n",
+    "3. Devide and conqure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e42cf25d",
    "metadata": {},
    "source": []
   }
