--- a/z_summerize.ipynb
+++ b/z_summerize.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Recursion \n",
     "\n",
-    "### 🔹 What is Recursion?\n",
+    "### What is Recursion?\n",
     "\n",
     "Recursion is when a method calls itself to solve a smaller version of the problem.\n",
     "\n",
@@ -17,7 +17,7 @@
     "\n",
     "Recursive Case: Calls itself with modified input.\n",
     "\n",
-    "### ⚠️ Common Pitfalls:\n",
+    "### Common Pitfalls:\n",
     "\n",
     "Missing base case → infinite recursion\n",
     "\n",
@@ -63,7 +63,19 @@
     "        a, b = 1, 1\n",
     "        for _ in range(2, n + 1):\n",
     "            a, b = b, a + b\n",
-    "        return b"
+    "        return b\n",
+    "    \n",
+    "def fac(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * fac(n-1)\n",
+    "    \n",
+    "def fibo(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return fibo(n-1) + fibo(n-2)"
    ]
   },
   {
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f2af8292",
    "metadata": {},
    "outputs": [],
@@ -98,7 +110,13 @@
     "#iterative version\n",
     "def gcd_iterative(a, b):\n",
     "    while b != 0:\n",
-    "        a, b = b, a % b"
+    "        a, b = b, a % b\n",
+    "\n",
+    "def gcd_j(a, b):\n",
+    "    if b == 0:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return gcd_j(b, a % b)"
    ]
   },
   {
@@ -113,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5a307c57",
    "metadata": {},
    "outputs": [
@@ -157,6 +175,18 @@
     "    else:\n",
     "        return 2 * hanoi_min_moves(n - 1) + 1\n",
     "\n",
+    "\n",
+    "def hmm(n):\n",
+    "    \"\"\"\n",
+    "    Move n-1 disks to the helper peg → hmm(n - 1) moves\n",
+    "    Move the largest disk to destination → 1 move\n",
+    "    Move the n-1 disks from helper peg to destination peg → hmm(n - 1) moves again\n",
+    "    \"\"\"\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2 * hmm(n-1) + 1\n",
+    "\n",
     "def hanoi(n, src, dst, tmp):\n",
     "    if n >= 1:\n",
     "        hanoi(n-1, src, tmp, dst)\n",
@@ -169,9 +199,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4adf53f",
+   "metadata": {},
+   "source": [
+    "## Inplace Operation\n",
+    "\n",
+    "techinique allow to change the datac without adding aditional space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b0b5ec8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n",
+      "[50, 40, 30, 20, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reverse Array In-Place\n",
+    "def reverse(arr):\n",
+    "    left = 0\n",
+    "    right = len(arr) - 1\n",
+    "\n",
+    "    while left < right:\n",
+    "        # Swap elements at left and right indices\n",
+    "        temp = arr[left]\n",
+    "        arr[left] = arr[right]\n",
+    "        arr[right] = temp\n",
+    "\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "\n",
+    "n = [10, 20, 30, 40, 50]\n",
+    "print(n)\n",
+    "reverse(n)\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "534ca4f6",
+   "metadata": {},
+   "source": [
+    "## Sliding Window\n",
+    "\n",
+    "The main idea is to use the the result of previous window to do the computation for the next window\n",
+    "\n",
+    "Efficiently find something (like max/min/sum/count) in a contiguous subarray using a \"window\" of fixed or dynamic size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93379ccd",
+   "id": "1069bcf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time complexity is O(n) from for loop i in range(n - k):\n",
+    "\n",
+    "\n",
+    "def maxSum(arr, k):\n",
+    "    n = len(arr)\n",
+    "\n",
+    "    # n must be greater than k\n",
+    "    if n <= k:\n",
+    "        print(\"Invalid\")\n",
+    "        return -1\n",
+    "\n",
+    "    # Compute sum of first window of size k\n",
+    "    window_sum = sum(arr[:k])\n",
+    "\n",
+    "    # first sum available\n",
+    "    max_sum = window_sum\n",
+    "\n",
+    "    # Compute the sums of remaining windows by\n",
+    "    # removing first element of previous\n",
+    "    # window and adding last element of\n",
+    "    # the current window.\n",
+    "    for i in range(n - k):\n",
+    "        window_sum = window_sum - arr[i] + arr[i + k]\n",
+    "        max_sum = max(window_sum, max_sum)\n",
+    "\n",
+    "    return max_sum\n",
+    "\n",
+    "\n",
+    "# Driver code\n",
+    "arr = [1, 4, 2, 20, 2, 3, 1, 0, 20]\n",
+    "k = 4\n",
+    "print(maxSum(arr, k))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e9b854",
+   "metadata": {},
+   "source": [
+    "## Prefix Sum\n",
+    "\n",
+    "Given an array $arr[]$ of size $n$, the task is to find the prefix sum of the array. A prefix sum array is another array $prefixSum[]$ of the same size, such that $prefixSum[i]$ is $arr[0] + arr[1] + arr[2] . . . arr[i]$."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "5655e255",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Example:\n",
+    "Input: arr[] = [10, 20, 10, 5, 15]\n",
+    "Output: 10 30 40 45 60\n",
+    "Explanation: For each index i, add all the elements from 0 to i:\n",
+    "prefixSum[0] = 10, \n",
+    "prefixSum[1] = 10 + 20 = 30, \n",
+    "prefixSum[2] = 10 + 20 + 10 = 40 and so on.\n",
+    "\n",
+    "Input: arr[] = [30, 10, 10, 5, 50]\n",
+    "Output: 30 40 50 55 105\n",
+    "Explanation: For each index i, add all the elements from 0 to i:\n",
+    "prefixSum[0] = 30, \n",
+    "prefixSum[1] = 30 + 10 = 40,\n",
+    "prefixSum[2] = 30 + 10+ 10 = 50 and so on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66258b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 30, 40, 45, 60]\n",
+      "[30, 40, 50, 55, 105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Total time complexity is O(n) from for loop i in range n\n",
+    "def prefixSum(arr):\n",
+    "    n = len(arr)\n",
+    "    prefixArr = [0] * n\n",
+    "    for i in range(n):\n",
+    "        if i == 0:\n",
+    "            prefixArr[i] = arr[0]\n",
+    "        else:\n",
+    "            prefixArr[i] = prefixArr[i-1] + arr[i]\n",
+    "    return prefixArr\n",
+    "\n",
+    "arr = [10, 20, 10, 5, 15]\n",
+    "print(prefixSum(arr))\n",
+    "arr = [30, 10, 10, 5, 50]\n",
+    "print(prefixSum(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2be6d7e",
    "metadata": {},
    "outputs": [],
    "source": []
