Add Two Sum implementation

--- a/z_summerize.ipynb
+++ b/z_summerize.ipynb
@@ -200,6 +200,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e2f6443",
+   "metadata": {},
+   "source": [
+    "# Array Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c4adf53f",
    "metadata": {},
    "source": [
@@ -374,12 +382,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5237509",
+   "metadata": {},
+   "source": [
+    "## Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2da9e52",
+   "metadata": {},
+   "source": [
+    "### Two Sum\n",
+    "\n",
+    "Try to find the sum of two number to get the target result\n",
+    "\n",
+    "    nums = [2, 7, 11, 15]\n",
+    "    target = 9\n",
+    "    we choose 2 and 7 from this array\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2be6d7e",
+   "id": "591e8394",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def twoSum(arr, target):\n",
+    "  \n",
+    "    # Create a set to store the elements\n",
+    "    s = set()\n",
+    "\n",
+    "    for num in arr:\n",
+    "      \n",
+    "        # Calculate the complement that added to\n",
+    "        # num, equals the target\n",
+    "        complement = target - num\n",
+    "\n",
+    "        # Check if the complement exists in the set\n",
+    "        if complement in s:\n",
+    "            return True\n",
+    "\n",
+    "        # Add the current element to the set\n",
+    "        s.add(num)\n",
+    "\n",
+    "    # If no pair is found\n",
+    "    return False\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    arr = [0, -1, 2, -3, 1]\n",
+    "    target = -2\n",
+    "    if twoSum(arr, target):\n",
+    "        print(\"true\")\n",
+    "    else:\n",
+    "        print(\"false\")"
+   ]
   }
  ],
  "metadata": {
