--- a/z_summerize.ipynb
+++ b/z_summerize.ipynb
@@ -405,10 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "591e8394",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n"
+     ]
+    }
+   ],
    "source": [
     "def twoSum(arr, target):\n",
     "  \n",
@@ -439,6 +447,125 @@
     "    else:\n",
     "        print(\"false\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39881e02",
+   "metadata": {},
+   "source": [
+    "# Linked Lists\n",
+    "\n",
+    "### 1. Singly Linked List\n",
+    "• Each node points to the next\n",
+    "\n",
+    "• Ends at null\n",
+    "\n",
+    "### 2. Doubly Linked List\n",
+    "• Each node points to both next and prev\n",
+    "\n",
+    "• Enables bi-directional traversal\n",
+    "\n",
+    "### 3. Circular Linked List\n",
+    "• Last node connects back to the head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e46f547e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70868903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Iterative\n",
+    "def reverseLinkedList(head):\n",
+    "    prev = None\n",
+    "    while head:\n",
+    "        node = head\n",
+    "        head = head.next\n",
+    "        node.next = prev\n",
+    "        prev = node\n",
+    "    return prev\n",
+    "\n",
+    "#recursive\n",
+    "def reversalLinkedListRecursive(head):\n",
+    "    if not head or not head.next:\n",
+    "        return head\n",
+    "    new_head = reversalLinkedListRecursive(head.next)\n",
+    "    head.next.next = head\n",
+    "    head.next = None\n",
+    "    return new_head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "44d1500c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_two_lists(l1, l2):\n",
+    "    dummy = ListNode()\n",
+    "    tail = dummy\n",
+    "\n",
+    "    while l1 and l2:\n",
+    "        if l1.val < l2.val:\n",
+    "            tail.next = l1\n",
+    "            l1 = l1.next\n",
+    "        else:\n",
+    "            tail.next = l2\n",
+    "            l2 = l2.next\n",
+    "        tail = tail.next\n",
+    "\n",
+    "    tail.next = l1 or l2\n",
+    "    return dummy.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a4879fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_two_numbers(l1, l2):\n",
+    "    dummy = ListNode()\n",
+    "    curr = dummy\n",
+    "    carry = 0\n",
+    "\n",
+    "    while l1 or l2 or carry:\n",
+    "        v1 = l1.val if l1 else 0\n",
+    "        v2 = l2.val if l2 else 0\n",
+    "        total = v1 + v2 + carry\n",
+    "        carry = total // 10\n",
+    "        curr.next = ListNode(total % 10)\n",
+    "        curr = curr.next\n",
+    "\n",
+    "        if l1: l1 = l1.next\n",
+    "        if l2: l2 = l2.next\n",
+    "\n",
+    "    return dummy.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a0042e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
