--- a/z_summerize.ipynb
+++ b/z_summerize.ipynb
@@ -560,9 +560,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b62ca93",
+   "metadata": {},
+   "source": [
+    "# Stacks & Queues\n",
+    "\n",
+    "🔹 Stack (LIFO — Last In First Out)\n",
+    "Think: Undo, browser back, call stack\n",
+    "\n",
+    "Operations: push(), pop(), peek()\n",
+    "\n",
+    "🔹 Queue (FIFO — First In First Out)\n",
+    "Think: Print queue, task scheduling, level-order traversal\n",
+    "\n",
+    "Operations: enqueue(), dequeue(), peek()\n",
+    "\n",
+    "🔹 Deque (Double-Ended Queue)\n",
+    "Efficient insertion/removal from both ends\n",
+    "\n",
+    "Used in sliding window, palindrome check, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "09efe6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# Stack using list\n",
+    "stack = []\n",
+    "stack.append(10)\n",
+    "top = stack.pop()\n",
+    "\n",
+    "# Queue using deque\n",
+    "queue = deque()\n",
+    "queue.append(10)\n",
+    "front = queue.popleft()\n",
+    "\n",
+    "# Deque\n",
+    "dq = deque()\n",
+    "dq.appendleft(1)\n",
+    "dq.append(2)\n",
+    "left = dq.popleft()\n",
+    "right = dq.pop()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a0042e4",
+   "id": "7a01aad1",
    "metadata": {},
    "outputs": [],
    "source": []
