--- a/w10_Divide-and-Conquer.ipynb
+++ b/w10_Divide-and-Conquer.ipynb
@@ -14,17 +14,7 @@
    "id": "62a7b849",
    "metadata": {},
    "source": [
-    "## Master Theory \n",
-    "\n",
-    "Theorem 1\n",
-    "\n",
-    "$T(n) = aT(n/b) + f(n)$\n",
-    "\n",
-    "$a$ is number of recuesion call\n",
-    "\n",
-    "$b$ is constant factor that breakdown the size of problem\n",
-    "\n",
-    "$f(n)$ is combine them (must increase positive function)\n",
+    "## Dijkstra’s Algorithm (Greedy Algo)## Dijkstra’s Algorithm (Greedy Algo)\n",
     "\n",
     "3 conditions"
    ]
