--- a/w12_ShortestPath.ipynb
+++ b/w12_ShortestPath.ipynb
@@ -50,6 +50,7 @@
     "# This checks:\n",
     "# \"Can we get to v through u with a shorter distance?\"\n",
     "# If so, update v’s distance and remember u as the parent.\n",
+    "\n",
     "procedure Relax(u, v, w)\n",
     "    if v.d > u.d + w (u, v) then\n",
     "        v.d = u.d + w (u, v)\n",
@@ -106,13 +107,13 @@
     }
    },
    "source": [
-    "procedure Dijkstra(G, w, r)\n",
+    "procedure Dijkstra(G, w, r)         # Prim\n",
     "    Initialize-Single-Source(G, s)\n",
     "    S = φ\n",
-    "    Q = G.V\n",
+    "    Q = G.V                         # Q = all node in the graph\n",
     "    while(Q notequal φ)\n",
-    "        u =Extract-Min(Q)           # pop minimum distance node\n",
-    "        S = S ∪ {u}\n",
+    "        u = Extract-Min(Q)          # pop minimum distance node\n",
+    "        S = S ∪ {u}                 # same as VT\n",
     "        for(each v ∈ G.Adj [u])\n",
     "            Relax(u, v, w)\n",
     "        end for\n",
@@ -121,11 +122,40 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "ad27d998",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "# Better Dijkstra Practice\n",
+    "\n",
+    "procedure Dijkstra(G, w, r)\n",
+    "    VT = {r}\n",
+    "    d[r] = 0\n",
+    "    for (all v ∈ V - VT)\n",
+    "        if({r, v} ∈ E)\n",
+    "            d[v] = w(r,v)\n",
+    "        else\n",
+    "            d[v] = ∞\n",
+    "    end for\n",
+    "\n",
+    "    while (VT not equal V)\n",
+    "        find a vertex such that d[u] = min{d[v], | v ∈ V - VT}\n",
+    "        VT = VT ∪ {u}\n",
+    "        for all (v ∈ V - VT)\n",
+    "            d[v] = min{d[v], u.d + w(u, v)}                         ← same as Relax\n",
+    "end procedure\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a19d843",
    "metadata": {},
    "source": [
-    "## Bellman-Ford Algorithm\n",
+    "## Belman-Ford Algorithm (Dynamic Approach)\n",
     "\n",
     "**Best for:** Graphs with negative edge weights, detects negative cycles\n",
     "\n",
@@ -133,7 +163,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "id": "78bddddc",
    "metadata": {},
    "source": [
@@ -194,11 +224,41 @@
     "    return D\n",
     "end procedure"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676f8a4e",
+   "metadata": {},
+   "source": [
+    "## Dijkstra’s Algorithm (Greedy Algo): Example Practice\n",
+    "\n",
+    "Word Ladder"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "741a6b9d",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "1. Explain how to make it in graph format\n",
+    "\n",
+    "2. Use Dijkstra"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "0fcc2b0f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
