--- a/w12_finalExamPrep.ipynb
+++ b/w12_finalExamPrep.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e3001dab",
+   "metadata": {},
+   "source": [
+    "# 5-6 Problem\n",
+    "\n",
+    "### Programming Paradigm 3 questions\n",
+    "\n",
+    "- Dynamic Programming   -> Have many pump, each pump have diffrent efficiency, each pump output diffrent output and have diffrent cost, hard part is recursion, draw recursion tree -> if need to go to all tree is recursion, if select one path is Greedy [HW]\n",
+    "\n",
+    "- Greedy Approach       -> Have many pump, each pump have diffrent efficiency, each pump output diffrent output and have diffrent cost, cost will = Highest cost * pump\n",
+    "\n",
+    "- Divide and Conquer    -> Stat like findMin findMedian, Straith foward, use bruce force approach, Tricks: use naive approach in both recursive call and combine, TC = bruceforce, Master Theory -> Theorem 1 -> $T(n) = aT(n/b) + f(n)$\n",
+    "\n",
+    "### Is the problem ask to search or optimise\n",
+    "    - Search: 3-4 Algorithm to spot\n",
+    "    - Optimise[BFS]: MST and Shortest Path\n",
+    "\n",
+    "1. Master Theorem       -> Easy\n",
+    "\n",
+    "2. Divide and Conquer binary search result (Minimize the maximum)\n",
+    "\n",
+    "3. Dyhnamic Programming\n",
+    "\n",
+    "4. Greedy\n",
+    "\n",
+    "5. Graphs [1 or 2] [HW]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d02c5038",
    "metadata": {},
    "source": [
